# awsysco-python-sdk

./: .gitignore  .gitleaks.toml  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: publish.yml  secret-scan.yml
awsysco/: __init__.py  _async_http.py  _http.py  client.py  exceptions.py  models.py
awsysco/async_resources/: __init__.py  affiliate.py  agentlink.py  analytics.py  bulk.py  custom_domains.py  data_export.py  folders.py  links.py  me.py  namespace.py  qr.py  saved_views.py  tags.py  trust_score.py  utm_templates.py  webhooks.py
awsysco/resources/: affiliate.py  agentlink.py  analytics.py  bulk.py  custom_domains.py  data_export.py  folders.py  links.py  me.py  namespace.py  qr.py  saved_views.py  tags.py  trust_score.py  utm_templates.py  webhooks.py
examples/: async_usage.py  basic_usage.py  integration_test.py
reports/: implementation-report.md
tests/: conftest.py  test_affiliate.py  test_agentlink.py  test_analytics.py  test_async_client.py  test_bulk.py  test_custom_domains.py  test_data_export.py  test_folders.py  test_links.py  test_me.py  test_namespace.py  test_qr.py  test_saved_views.py  test_tags.py  test_trust_score.py  test_utm_templates.py  test_webhooks.py
