[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awsysco"
version = "1.1.0"
description = "Official Python SDK for the AWSYS.CO URL Shortener API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Alpha Wave Systems", email = "dev@awsys.co" },
]
keywords = ["url-shortener", "awsys", "sdk", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio",
  "python-dotenv",
  "pytest-cov",
]

[project.urls]
Homepage = "https://awsys.co"
Documentation = "https://docs.awsys.co"
Repository = "https://github.com/AlphaWaveSystems/awsysco-python-sdk"
"Bug Tracker" = "https://github.com/AlphaWaveSystems/awsysco-python-sdk/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["awsysco"]
